--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title> DEEPAK's BIO</title>
-<link rel="stylesheet" href="styles.css\styles1.css">
+<link rel="stylesheet" href="styles1.css">
 <link rel="icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Heebo:wght@800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-  <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+  <img class="top-cloud" src="cloud.png" alt="cloud-image">
 <h1>I am Deep</h1>
 <p>A <span class="pro">pro</span>grammer.</p>
-<img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-<img src="images/mountain.png" alt="mountain.png">
+<img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+<img src="mountain.png" alt="mountain.png">
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img class="profile-pic" src="images/circle-cropped.png" alt="profile-photo">
+    <img class="profile-pic" src="circle-cropped.png" alt="profile-photo">
     <h2>Hello.</h2>
     <p>I am a web developer and designer.</p>
   </div>
@@ -25,12 +25,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="computer-img" src="images/computer-pic.png" alt="cloud-image">
+      <img class="computer-img" src="computer-pic.png" alt="cloud-image">
       <h3>Design & Development</h3>
       <p>I am working on improving my skills and seeking for opportunities to prove my hardwork and dedication toward my work.</p>
     </div>
     <div class="skill-row">
-      <img class="english-pic" src="images/english.png.png" alt="laptop-pic">
+      <img class="english-pic" src="english.png.png" alt="laptop-pic">
       <h3>English</h3>
       <p>I have good listening , writting and speaking skills too, although i scored 7 bands in IELTS.</p>
     </div>
