--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <br>
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/deepak-chaudhary-4054391b2/">LinkedIn</a>
-  <a class="footer-link" href="https://deepakchaudhary620.github.io/Bio/">Website</a>
+  <a class="footer-link" href="https://deepakchaudhary620.github.io/cv/">Website</a>
   <p class="copyright" >© 2020 Deepak Chaudhary.</p>
 </div>
 
